# cover-float

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  config.svh  pyproject.toml
coverage/: coverfloat.sv  coverfloat_coverage.sv  coverfloat_interface.sv  coverfloat_pkg.sv  macros.svh
coverage/covergroups/: B1.svh  B10.svh  B14.svh  B21.svh  B3.svh  B5.svh  B9.svh
coverage/covergroups/bins_templates/: BF16_basic_types_bins.svh  F128_basic_types_bins.svh  F16_basic_types_bins.svh  F32_basic_types_bins.svh  F64_basic_types_bins.svh  FP_result_op_bins.svh  FP_src1_op_bins.svh  FP_src2_op_bins.svh  FP_src3_op_bins.svh  arithmetic_op_bins.svh  conversion_op_bins.svh
docs/: B10.adoc
script/: B1.py  B10.py  B9.py  parse_testvectors.py
sim/: run.do
src/: coverfloat.c  coverfloat.h
src/c/: coverfloat.c  coverfloat.h  main.cpp
src/cover_float/: __init__.py  _core.pyi  _reference.pyi  cli.py
src/cover_float/common/: __init__.py  constants.py  util.py
src/cover_float/reference/: __init__.py  impl.py
src/cover_float/scripts/: __init__.py  parse_testvectors.py
src/cover_float/testgen/: B1.py  B10.py  B12.py  B14.py  B3.py  B9.py  __init__.py  coverfloat.py
src/submodules/: CMakeLists.txt
tests/covervectors/: test.txt
tests/testvectors/: test.txt
